--- a/a3 qh.tex
+++ b/a3 qh.tex
@@ -55,20 +55,25 @@ An avl tree is a self balancing binary search tree that has the property that, f
      \item On LDS:\\
      Suppose \(P_i = [(r_1,h_1), (r_2, h_2), \hdots, (r_i, h_i)]\) is the input sequence, then a LDS of \(P_i\) which ends with the element \((r_i, h_i)\), denoted as LDS(\(P_i\)), is a longest sequence among \(S_k\) for \textbf{all} \(k \in [1, i-1]\) where
      \begin{equation*}
-          S_k = 
+          S_{k \in [1, i-1]} = 
           \begin{cases}
                \text{LDS(\(P_k\))} + [(r_i, h_i)] & \text{if } r_k > r_i \text{ and } h_k > h_i \\
                [(r_i, h_i)] & \text{if } r_k \leq r_i \text{ or } h_k \leq h_i
           \end{cases}
      \end{equation*}
      Here \('+'\) means concatenation of two sequences, and \(P_k\) is the sequence \([(r_1,h_1), (r_2, h_2), \hdots, (r_k, h_k)]\).
-     \begin{itemize}
-          \item LDS of \(P_k\) for some k
-          \item \([(r_i, h_i)]\) if for all \(k \in [1, i-1]\) \(r_k \leq r_i \text{ or } h_k \leq h_i\)
-     \end{itemize}
      \item On the length of LDS:
+     \begin{equation*}
+          dp[i] = 
+          \begin{cases}
+               1 & i = 1 \\
+               \max (1, \displaystyle\max_{\substack{k \in [1, i-1] \\ r_k > r_i \land h_k > h_i}}(1 + dp[k])) & i > 1
+          \end{cases}
+     \end{equation*}
+     \(dp[i]\) is the length of the LDS of \(P_i\) and the last element of the LDS is \((r_i, h_i)\)
 \end{itemize}
  
+\paragraph{(b)}
 
 
 \end{document}
