--- a/a3 qh.tex
+++ b/a3 qh.tex
@@ -102,5 +102,9 @@ An avl tree is a self balancing binary search tree that has the property that, f
      \end{algorithmic}
 \end{algorithm}
 
-\paragraph{(c).} Time complexity is \(O(n^2)\). The computation of length of LDS is at line \(3-12\), we have two for loops. The outer loop iterates through each element of the original sequence,
+\paragraph{(c).} Time complexity is \(O(n^2)\). The computation of length of LDS that ends with each element of \(P\) requires two for loops (at line \(3-12\)). The outer loop iterates through each element of the original sequence.
+
+
+\subsection*{Q6.}
+\paragraph{(a).}
 \end{document}
