--- a/a3 qh.tex
+++ b/a3 qh.tex
@@ -106,7 +106,7 @@ An avl tree is a self balancing binary search tree that has the property that, f
 \paragraph{(c).} Time complexity is \(O(n^2)\). The computation of length of LDS that ends with each element of \(P\) requires two for loops (at line \(3-12\)). The outer loop iterates through each element of the original sequence which serves as the last element of the LDS, and the inner loop searches for the previous LDS that ends with element of greater size than the current last element. The total number of operations at line \(6\) is \(\sum_{i=1}^n i-1 = \frac{n(n-1)}{2} = O(n^2)\). The loop body is just constant time operations, so the total cost is \(O(n^2)\). Line \(15-20\) searches for the longest sequence among all LDS that ends with a particular element. This takes another \(O(n)\) time. Line \(21-28\) outputs the sequence by tracing from the last element to the first. This takes at most \(O(n)\) time since the sequence is at most of length \(n\). The total time complexity would therefore be \(O(n^2) + O(n) + O(n) = O(n^2)\).
 
 \subsection*{Q6.}
-\paragraph{(a).} Suppose \(k_i\) is the number of proposals for the \(i^{th}\) approach, and \(m_{ij}\) is the funding requested for the \(j^{th}\) proposal for the \(i^{th}\) approach, where \(j \in [1, k_i]\). We would use a \(dp\) table to store the choices of proposals. In the following psuedocode, entry \(dp[i][j]\) is a pair of values \(\langle x,y\rangle\) where \(x\) is one funding sum (potentially out of multiple possibilities) requested by the previous (\(i-1\)) approaches, given that all \(i\) approaches request the exact funding sum \(j\), and the second value \(y\) is the corresponding index of the proposal for the \(i^{th}\) approach that suffices the condition for the value \(x\). If there is no set of proposals for the first \(i\) approaches that have the exact funding sum \(j\), \(dp[i][j]\) would be \(\langle 0,0\rangle\). The reason for keeping the fund sum of the previous \((i-1)\) proposals is to back trace the selected proposals at the end.
+\paragraph{(a).} Given that \(k_i\) is the number of proposals for the \(i^{th}\) approach, and \(m_{ij}\) is the funding requested for the \(j^{th}\) proposal for the \(i^{th}\) approach, where \(j \in [1, k_i]\). We would use a \(dp\) table to compute the choices of proposals. In the following psuedocode, entry \(dp[i][j]\) is a pair of values \(\langle x,y\rangle\) where \(x\) is a funding sum (potentially many possibilities) requested by the previous (\(i-1\)) approaches, given that \(j\) is the exact funding requested by all \(i\) approaches; and the second value \(y\) is the corresponding index of the proposal for the \(i^{th}\) approach such that \(x\) + \(m_{iy}\) = \(j\). If there is no set of proposals for the first \(i\) approaches that sum to \(j\) exactly, \(dp[i][j]\) would be \(\langle 0,0\rangle\). The reason for keeping the fund sum of the previous \((i-1)\) proposals is to back trace the selected proposals at the end.
 \begin{algorithm}[H]
      \caption{Set of proposals (n, F, m)}
      \begin{algorithmic}[1]
