--- a/a3 qh.tex
+++ b/a3 qh.tex
@@ -49,36 +49,46 @@ Hence, it is not a red black tree in this case.
 \subsection*{Q3.}
 An avl tree is a self balancing binary search tree that has the property that, for any node \(x\) in the tree, \(x\) has at most two children, and \(x.left.key \leq x.key \leq x.right.key\). Although for an avl tree, we might need rotation for insertion and deletion operations in order to maintain the balance factor, we still guarantee that the bst property holds. So the node with the minimum key is the left-most node in the tree. We could find it by traversing down the tree from the root, and always choosing the left subtree to traverse, until we find the left subtree to be nil, then the current node contains the minimum key. Similarly, the node with the maximum key is the right-most node in the tree. Beginning from the root, we always traverse the right subtree, until the right subtree is nil, then the current node contains the maximum key. 
 
+\subsection*{Q4.}
+
 \subsection*{Q5.}
 \paragraph{(a).}
-\textbf{Sub-problems:} We use slightly different sub-problems. We find the longest strictly decreasing sequence(LDS) of the prefixes of the original sequence, where the LDS is ended with the last element(box size) of the prefix. We also find the length of such LDS. A solution to the original problem would be a longest sequence among all solutions to the sub-problems.\\
+First, we simplify the problem into a longest decreasing subsequence (LDS) problem by sorting. We sort based on the first parameter, i.e. radius, in the descending order. This ensures that we could choose a longest decreasing sequence out of the original unsorted \(n\) boxes, by simply finding the LDS of the sorted sequence. Note that here we cannot solve the LDS based on height purely, since in the case where radius are the same and height are in the descending order, we might mistakenly contribute boxes of the same radius to the LDS. We could avoid this by also sorting based on height, in the ascending order, for the boxes of the same radius, and then find the LDS based on height only; or we could just compare both radius and height as we find the LDS without performing sort on height. In the following algorithm, I will choose the second approach.
+Now we can find the LDS by dynamic programming. \\
+\textbf{Sub-problems:} The sub-problems are LDS of the prefixes of the sorted sequence, and the LDS is ended with the last element of the prefix. We also find the length of such LDS. A solution to the original problem would be a longest sequence among all solutions to the sub-problems.\\
 \textbf{Relation between sub-problems:}
 \begin{itemize}
      \setlength \itemsep{0em} 
      \item On LDS:\\
-     Suppose \(P_i = [(r_1,h_1), (r_2, h_2), \hdots, (r_i, h_i)]\) is the input sequence, then a LDS that ends with the element \((r_i, h_i)\), is built from a LDS that ends with \((r_k, h_k)\) for \(k \in [1, i-1]\) where \(r_k > r_i\) and \(h_k > h_i\). There could be multiple \(k\)'s that form the longest subsequence. As formula, LDS(\(P_i = \text{longest}([(r_i, h_i)], \underset{\substack{k \in [1, i-1] \\ r_k > r_i \land h_k > h_i}}{\text{longest}}(\text{LDS(\(P_k\))} + [(r_i, h_i)])\)). Here \('+'\) means concatenation of two sequences, and \(P_k\) is the sequence \([(r_1,h_1), (r_2, h_2), \hdots, (r_k, h_k)]\).
+     Suppose \(P_i = \langle(r_1,h_1), (r_2, h_2), \hdots, (r_i, h_i)\rangle\) is the sequence that is sorted based on \(r\), then a LDS that ends with the element \((r_i, h_i)\), is built from a LDS that ends with \((r_k, h_k)\) for \(k \in [1, i-1]\) where \(r_k > r_i\) and \(h_k > h_i\). There could be multiple \(k\)'s that form the LDS of \(P_i\). Or if such \(k\) does not exist, then the LDS is \(\langle(r_i, h_i)\rangle\). Expressed as a formula, 
+     \begin{equation*}
+          \text{LDS(\(P_i\))} = \text{longest}(\langle(r_i, h_i)\rangle, \underset{\substack{k \in [1, i-1] \\ r_k > r_i\ \land\ h_k > h_i}}{\text{longest}}(\text{LDS(\(P_k\))} + \langle(r_i, h_i)\rangle)
+     \end{equation*}
+   Here \('+'\) is the concatenation of two sequences, and \(P_k\) is the slice \(P_i\)[\(1 .. k\)].
      \item On the length of LDS:
      \begin{equation*}
           dp[i] = 
           \begin{cases}
                1 & i = 1 \\
-               \max (1, \displaystyle\max_{\substack{k \in [1, i-1] \\ r_k > r_i \land h_k > h_i}}(1 + dp[k])) & i > 1
+               \max (1, \displaystyle\max_{\substack{k \in [1, i-1] \\ r_k > r_i\ \land\ h_k > h_i}}(1 + dp[k])) & i > 1
           \end{cases}
      \end{equation*}
      \(dp[i]\) is the length of the LDS of \(P_i\) and the last element of the LDS is \((r_i, h_i)\)
 \end{itemize}
  
-\paragraph{(b)} Let \(P\) denote the input sequence \([(r_1,h_1), (r_2,h_2), \hdots, (r_n,h_n)]\). In the following psuedocode, we access the \(i^{th}\) element (box size) in \(P\) by \(P[i]\), and access \(r_i\) by \(P[i].r\) and  \(h_i\) by \(P[i].h\).
+\paragraph{(b)} Let \(P\) denote the input list \([(r_1,h_1), (r_2,h_2), \hdots, (r_n,h_n)]\). In the following psuedocode, we access the \(i^{th}\) element in \(P\) by \(P[i]\), and access \(r_i\) by \(P[i].r\) and  \(h_i\) by \(P[i].h\).
 \begin{algorithm}[H]
      \caption{Bottom-up Longest Strictly Decreasing Sequence(\(P\))}
      \begin{algorithmic}[1]
-     \State let \(dp[1..n]\) be an empty array \Comment{\(dp[i]\) stores the length of LDS with \(P[i]\) as the last element}
-     \State let \(prev[1..n]\) be an empty array \Comment{\(prev[i]\) stores the index of the previous element of \(P[i]\)}
+     \State let \(dp[1..n]\) be an empty array \Comment{\(dp[i]\) stores the length of LDS(\(P_{sorted} [1 .. i]\)) that ends with \(P_{sorted}[i]\)}
+     \State let \(prev[1..n]\) be an empty array \\ \Comment{\(prev[i]\) stores the index of the second last element of LDS(\(P_{sorted} [1 .. i]\))}
+     \State \textbf{MergeSort} (\(P, 1, n\)) \Comment{in descending order based on \(r\)}
      \For {\(i = 1\) to \(n\)}
           \State \(dp[i] = 1\)
-          \State \(prev[i] = i\)
+          \State \(prev[i] = i\) \Comment{prev of the first element is set to be itself}
           \For {\(k = 1\) to \(i-1\)}
-               \If{\(P[k].r > P[i].r\) \textbf{and} \(P[k].h > P[i].h\) \textbf{and} \(1 + dp[k] > dp[i]\)}
+               \If{\(P_{sorted}[k].r > P_{sorted}[i].r\) \textbf{and} \(P_{sorted}[k].h > P_{sorted}[i].h\) \textbf{and} \(1 + dp[k] > dp[i]\)} 
+               \\ \Comment{compare \(r\) to avoid counting boxes of the same radius}
                     \State \(dp[i] = 1 + dp[k]\)
                     \State \(prev[i] = k\)
                \EndIf
@@ -88,22 +98,47 @@ An avl tree is a self balancing binary search tree that has the property that, f
      \State int \(idx\) 
      \For{\(i = 1\) to \(n\)}
           \If {\(dp[i] > l\)}
-               \State \(l = dp[i]\) \Comment{\(l\) will store the length of LDS(\(P\))}
-               \State \(idx = i\) \Comment{\(idx\) is the index of the last element in the LDS(\(P\))}
+               \State \(l = dp[i]\) \Comment{\(l\) is the maximal length of the output sequence}
+               \State \(idx = i\) \Comment{\(idx\) is the index in \(P_{sorted}\) of the last element in the output sequence}
           \EndIf
      \EndFor
      \State let \(O[1..l]\) be the output sequence
      \While {\(idx \neq prev[idx]\)}
-          \State \(O[l] = P[idx]\)
+          \State \(O[l] = P_{sorted}[idx]\)
           \State \(idx = prev[idx]\)
           \State \(l = l - 1\)
      \EndWhile
-     \State \(O[l] = P[idx]\)
+     \State \(O[l] = P_{sorted}[idx]\)
      \State \Return \(O\)
      \end{algorithmic}
 \end{algorithm}
+\noindent The Merge function for the MergeSort is modified as follows
+\begin{algorithm}[H]
+     \caption{Merge in descending order (\(P, p, q, r\))}
+     \begin{algorithmic}[1]
+          \State \(n_1 = q-p+1\); \(n_2 = r-q\)
+          \State let \(L=[1 .. n_1 + 1]\) and \(R=[1.. n_2 +1]\)
+          \For {\(i = 1\) to \(n_1\)}
+               \State \(L[i] = P[p+i-1]\) \Comment{copy of lower subarray}
+          \EndFor
+          \For {\(i = 1\) to \(n_2\)}
+               \State \(R[i] = P[q+i]\) \Comment{copy of upper subarray}
+          \EndFor
+          \State \(L[n_1+1] = \infty\); \(R[n_2+1] = \infty\)
+          \State \(i = 1\); \(j = 1\)
+          \For {\(k = p\) to \(r\)}
+               \If {\(L[i].r \geq R[i].r\)} \Comment{\textbf{modification here}}
+                    \State \(P[k] = L[i]\)
+                    \State \(i = i + 1\)
+               \Else 
+                    \State \(P[k] = R[i]\)
+                    \State \(j = j + 1\)
+               \EndIf
+          \EndFor
+     \end{algorithmic}
+\end{algorithm}
 
-\paragraph{(c).} Time complexity is \(O(n^2)\). The computation of length of LDS that ends with each element of \(P\) requires two for loops (at line \(3-12\)). The outer loop iterates through each element of the original sequence which serves as the last element of the LDS, and the inner loop searches for the previous LDS that ends with element of greater size than the current last element. The total number of operations at line \(6\) is \(\sum_{i=1}^n i-1 = \frac{n(n-1)}{2} = O(n^2)\). The loop body is just constant time operations, so the total cost is \(O(n^2)\). Line \(15-20\) searches for the longest sequence among all LDS that ends with a particular element. This takes another \(O(n)\) time. Line \(21-28\) outputs the sequence by tracing from the last element to the first. This takes at most \(O(n)\) time since the sequence is at most of length \(n\). The total time complexity would therefore be \(O(n^2) + O(n) + O(n) = O(n^2)\).
+\paragraph{(c).} Time complexity is \(O(n^2)\). The merge sort takes \(O(n\log n)\). The computation of LDS that ends with each element of \(P_{sorted}\) requires two for loops (line \(3-12\)). The outer loop iterates through each element of the sorted sequence (\(n\) times), and the inner loop searches through all previous computed LDS. The total number of operations at line \(6\) is therefore \(\sum_{i=1}^n i-1 = \frac{n(n-1)}{2} = O(n^2)\). The loop body is just constant time operations, so the total cost is \(O(n^2)\). Line \(15-20\) searches for the longest sequence among all LDS sub-problems. This takes another \(O(n)\) time. Line \(21-28\) outputs the sequence by tracing from the last element to the first. This takes at most \(O(n)\) time since the sequence is at most of length \(n\). The total time complexity would therefore be \(O(n\log n) + O(n^2) + O(n) + O(n) = O(n^2)\).
 
 \subsection*{Q6.}
 \paragraph{(a).} Given that \(k_i\) is the number of proposals for the \(i^{th}\) approach, and \(m_{ij}\) is the funding requested for the \(j^{th}\) proposal for the \(i^{th}\) approach, where \(j \in [1, k_i]\). We would use a \(dp\) table to compute the choices of proposals. In the following psuedocode, entry \(dp[i][j]\) is a pair of values \(\langle x,y\rangle\) where \(x\) is a funding sum (potentially many possibilities) requested by the previous (\(i-1\)) approaches, given that \(j\) is the exact funding requested by all \(i\) approaches; and the second value \(y\) is the corresponding index of the proposal for the \(i^{th}\) approach such that \(x\) + \(m_{iy}\) = \(j\). If there is no set of proposals for the first \(i\) approaches that sum to \(j\) exactly, \(dp[i][j]\) would be \(\langle 0,0\rangle\). The reason for keeping the fund sum of the previous \((i-1)\) proposals is to back trace the selected proposals at the end.
