--- a/a3 qh.tex
+++ b/a3 qh.tex
@@ -188,7 +188,7 @@ Now we can find the LDS of the sorted sequence by dynamic programming. \\
 \paragraph{(c).} Time complexity is \(O(n^2)\). The merge sort takes \(O(n\log n)\). The computation of LDS that ends with each element of \(P_{sorted}\) requires two for loops (line \(3-12\)). The outer loop iterates through each element of the sorted sequence (\(n\) times), and the inner loop searches through all previous computed LDS. The total number of operations at line \(6\) is therefore \(\sum_{i=1}^n i-1 = \frac{n(n-1)}{2} = O(n^2)\). The loop body is just constant time operations, so the total cost is \(O(n^2)\). Line \(15-20\) searches for the longest sequence among all LDS sub-problems. This takes another \(O(n)\) time. Line \(21-28\) outputs the sequence by tracing from the last element to the first. This takes at most \(O(n)\) time since the sequence is at most of length \(n\). The total time complexity would therefore be \(O(n\log n) + O(n^2) + O(n) + O(n) = O(n^2)\).
 
 \subsection*{Q6.}
-\paragraph{(a).} Given that \(k_i\) is the number of proposals for the \(i^{th}\) approach, and \(m_{ij}\) is the funding requested for the \(j^{th}\) proposal for the \(i^{th}\) approach, where \(j \in [1, k_i]\). The following algorithm relies heavily on the assumption that all \(m_{ij}\) are integer numbers, and assuming this is allowed in the problem specification. We would use a \(dp\) table to compute the choices of proposals. In the following psuedocode, entry \(dp[i][j]\) is a pair of values \(\langle x,y\rangle\) where \(x\) is a funding sum (potentially many possibilities) requested by the previous (\(i-1\)) approaches, given that \(j\) is the exact funding requested by all \(i\) approaches; and the second value \(y\) is the corresponding index of the proposal for the \(i^{th}\) approach such that \(x\) + \(m_{iy}\) = \(j\). If there is no set of proposals for the first \(i\) approaches that sum to \(j\) exactly, \(dp[i][j]\) would be \(\langle 0,0\rangle\). The reason for keeping the fund sum of the previous \((i-1)\) proposals is to back trace the selected proposals at the end.
+\paragraph{(a).} Given that \(k_i\) is the number of proposals for the \(i^{th}\) approach, and \(m_{ij}\) is the funding requested for the \(j^{th}\) proposal for the \(i^{th}\) approach, where \(j \in [1, k_i]\). The following algorithm relies heavily on the assumption that all \(m_{ij}\) are integer numbers, and assuming this is allowed in the problem specification. We would use a \(dp\) table to compute the choices of proposals. In the following psuedocode, entry \(dp[i][j]\) is a pair of values \(\langle x,y\rangle\) where \(x\) is a funding sum (potentially many possibilities) requested by the previous (\(i-1\)) approaches, given that \(j\) is the exact funding requested by all \(i\) approaches; and the second value \(y\) is the corresponding index of the proposal for the \(i^{th}\) approach such that \(x\) + \(m_{iy}\) = \(j\). If there is no set of proposals for the first \(i\) approaches that sum to \(j\) exactly, \(dp[i][j]\) would be \(\langle 0,0\rangle\). The reason for keeping the fund sum of the previous \((i-1)\) proposals is to trace the selected proposals backwards at the end.
 \begin{algorithm}[H]
      \caption{Set of proposals (n, F, m)}
      \begin{algorithmic}[1]
@@ -225,7 +225,7 @@ Now we can find the LDS of the sorted sequence by dynamic programming. \\
           \State \Return \(totalFund\), \(seqProposals\), \(reqFund\)
      \end{algorithmic}
 \end{algorithm}
-\paragraph{(b).} Time complexity is \(O(F \times \sum_{i=1}^{n} k_i)\). In line \(5-15\), there are \(3\) for loops. The for loop at line \(5\) and for loop at line \(8\) sums to be \(\sum_{i=1}^{n-1} k_{i+1} = \sum_{i=2}^{n} k_{i} = O(\sum_{i=1}^{n} k_{i})\). This is then multiplied by \(F\) because of the for loop at line \(6\). The loop body is constant time operation, so line \(5-15\) is \(O(F \times \sum_{i=1}^{n} k_i))\). The initialization cost at line \(2-3\) costs another \(O(k_1)\) operations, and to output the final set of proposals at line \(19-30\), we have to traverse the last row of the dp table, which would at most iterate \(F\) times if there is no solution. If there is a solution, then we have another \(O(n)\) operations to trace backwards the sequence of proposals. Hence, in sum there should be \(O(F \times \sum_{i=1}^{n} k_i) + O(k_1) + O(F) + O(n)\), which is dominated by \(O(F \times \sum_{i=1}^{n} k_i)\). Notice that if we also count the initialization cost at line \(1\), which is \(O(n \times F)\) as the dimension of the table is \(n \times F\), in the end we still get \(O(F \times \sum_{i=1}^{n} k_i)\) as the time complexity since \(n \leq \sum_{i=1}^{n} k_i)\).
+\paragraph{(b).} Time complexity is \(O(F \times \sum_{i=1}^{n} k_i)\). In line \(4\text{-}9\), there are \(3\) layers of \textbf{for} loops. The outermost \textbf{for} loop at line \(4\) and the innermost loop at line \(7\) in total would have \(\sum_{i=1}^{n-1} k_{i+1} = \sum_{i=2}^{n} k_{i} = O(\sum_{i=1}^{n} k_{i})\) iterations. This is then multiplied by \(F\) because of the \textbf{for} loop at line \(5\). The loop body in line \(8\text{-}9\) is constant time operations, so the loops have cost \(O(F \times \sum_{i=1}^{n} k_i))\). The initialization in line \(2\textbf{-}3\) costs another \(O(k_1)\) operations, and to output the final set of proposals in line \(13\text{-}21\), we have to traverse the last row of the dp table, which would at most iterate \(F\) times if there is no solution. If there is a solution, then we have another \(O(n)\) operations to trace backwards the sequence of proposals. Hence, in sum there should be \(O(F \times \sum_{i=1}^{n} k_i) + O(k_1) + O(F) + O(n)\), which is dominated by \(O(F \times \sum_{i=1}^{n} k_i)\). Notice that if we also count the initialization cost at line \(1\), which is \(O(n \times F)\), in the end we still get \(O(F \times \sum_{i=1}^{n} k_i)\) as the time complexity since \(n \leq \sum_{i=1}^{n} k_i)\).
 
 \paragraph{(d).}
 Empirical analysis:
